Fixup some more API docs
