# backend/src/routes/users/github_login.rs
@@ -1,9 +1,19 @@
 use actix_session::Session;
+use actix_web::get;
 use oauth2::{basic::BasicClient, AuthUrl, ClientId, ClientSecret, CsrfToken, Scope, TokenUrl};
 use secrecy::ExposeSecret;
 
-#[cfg_attr(not(coverage), tracing::instrument(name = "Github Login", skip(session)))]
-#[actix_web::get("/github/login")]
+#[cfg_attr(feature = "openapi", utoipa::path(
+    path = "/users/github/login",
+    responses(
+        (status = 303),
+    )
+))]
+#[cfg_attr(
+    not(coverage),
+    tracing::instrument(name = "Github Login", skip(session))
+)]
+#[get("/github/login")]
 pub async fn github_login(session: Session) -> actix_web::HttpResponse {
     let settings = common::settings::get_settings().expect("Failed to read settings.");
 
